--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://online-classroom-and-examination.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
